--- a/style.css
+++ b/style.css
@@ -63,13 +63,18 @@ table {
     bottom: 10px;
 
 }
+.game {
+    display: flex;
+    height: 100%;
+}
 
 .gameArea {
+    display: flex;
     width: 300px;
-    height: 100%;
+    height: 900px;
     position: relative;
     margin: auto;
-    background: #f34;
+    background: #134;
     overflow: hidden;
 }
 
